@@ -36,6 +36,7 @@
     #define wxSYSTEM_MENU           0x00000800
     wxBORDER_NONE   =               0x00200000
     #define wxRESIZE_BORDER         0x00000040
+    #define wxDIALOG_NO_PARENT      0x00000020
 */
 
 enum
@@ -45,9 +46,9 @@ enum
     wxFD_OVERWRITE_PROMPT  = 0x0004,
     wxFD_NO_FOLLOW         = 0x0008,
     wxFD_FILE_MUST_EXIST   = 0x0010,
-    wxFD_MULTIPLE          = 0x0020,
     wxFD_CHANGE_DIR        = 0x0080,
-    wxFD_PREVIEW           = 0x0100
+    wxFD_PREVIEW           = 0x0100,
+    wxFD_MULTIPLE          = 0x0200
 };
 
 #define wxFD_DEFAULT_STYLE      wxFD_OPEN
