@@ -12,9 +12,9 @@ enum
     wxFD_OVERWRITE_PROMPT  = 0x0004,
     wxFD_NO_FOLLOW         = 0x0008,
     wxFD_FILE_MUST_EXIST   = 0x0010,
-    wxFD_MULTIPLE          = 0x0020,
     wxFD_CHANGE_DIR        = 0x0080,
-    wxFD_PREVIEW           = 0x0100
+    wxFD_PREVIEW           = 0x0100,
+    wxFD_MULTIPLE          = 0x0200
 };
 
 #define wxFD_DEFAULT_STYLE      wxFD_OPEN
